--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,24 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <main id="login-container">
+      <ion-img src="../../assets/Logo.png" id="image"></ion-img>
+
+      <form [formGroup]="formUser" (ngSubmit)="login()">
+
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <ion-input placeholder="Enter text" class="custom" formControlName="email"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Password</ion-label>
+          <ion-input type="password" placeholder="Enter text" class="custom" formControlName="password"></ion-input>
+        </ion-item>
+
+        <button id="button-login">Login</button>
+
+      </form>
+
+    </main>
   </div>
 </ion-content>
