--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,10 @@
+main {
+  padding: 30px 20px 30px 20px;
+}
+
 #container {
   text-align: center;
-
+  background-color: white;
   position: absolute;
   left: 0;
   right: 0;
@@ -8,20 +12,38 @@
   transform: translateY(-50%);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+#login-container {
+  border: solid #F7F7F7 2px;
+  border-radius: 5px;
+  width: 90%;
+  margin: auto;
+  box-shadow: 5px 3px 3px hsla(299, 100%, 78%, 0.30);
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+#image {
+  background-color: var(--ion-color-light-rgb);
 }
 
-#container a {
-  text-decoration: none;
+#button-login {
+  margin-top: 30px;
+  width: 70%;
+  height: 30px;
+  border-radius: 4px;
+  background-color: #3dc2ff;
+  color: #ffffff;
+  font-weight: 900;
+}
+
+ion-input.custom {
+  --color: #000000;
+  --placeholder-color: blue;
+  --placeholder-opacity: .8;
+}
+
+ion-item {
+  margin-top: 20px;
+}
+
+ion-button {
+  margin-top: 30px;
 }
