--- a/src/app/dashboard/pages/category/category.page.scss
+++ b/src/app/dashboard/pages/category/category.page.scss
@@ -3,6 +3,7 @@
     border: black solid 1px;
     margin: 20px auto 0 auto;
     padding-bottom: 20px;
+    box-shadow: 3px 3px 3px hsla(117, 0%, 73%, 0.25);
 }
 
 .container h2 {
