--- a/src/app/dashboard/pages/category/table-category/table-category.component.scss
+++ b/src/app/dashboard/pages/category/table-category/table-category.component.scss
@@ -1,8 +1,27 @@
 table {
     width: 100%;
     margin-top: 20px;
+    box-shadow: 3px 3px 3px 3px hsla(117, 0%, 73%, 0.25);
+    margin-bottom: 30px;
 }
 
 tr, th {
     border: black solid 1px;
+    height: 35px;
+}
+
+.r1 {
+    background-color: hsla(212, 100%, 87%, 0.5);
+}
+
+.r2 {
+    background-color: hsla(127, 100%, 82%, 0.5);
+}
+
+.r3 {
+    background-color: hsla(0, 100%, 76%, 0.5);
+}
+
+thead {
+    height: 20px;
 }
