--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,21 +1,26 @@
 <ion-content [fullscreen]="true">
   <div id="container">
     <main id="login-container">
-      <ion-img src="../../assets/Logo.png" id="image"></ion-img>
+      <ion-img src="../../assets/Logo.png" id="image" alt="Lends image"></ion-img>
 
       <form [formGroup]="formUser" (ngSubmit)="login()">
 
         <ion-item>
           <ion-label position="floating">Email</ion-label>
           <ion-input placeholder="Enter text" class="custom" formControlName="email"></ion-input>
+          <div [hidden]="email.valid || email.pristine">
+            <ion-note color="success" *ngIf="email?.errors?.['require']">Type a valid email</ion-note>
+            <ion-note color="danger" *ngIf="email?.errors?.['email']">Invalid email</ion-note>
+          </div>
         </ion-item>
 
         <ion-item>
           <ion-label position="floating">Password</ion-label>
           <ion-input type="password" placeholder="Enter text" class="custom" formControlName="password"></ion-input>
+            <ion-note color="danger" *ngIf="password?.errors?.['minLength']">Require min 8 characteres</ion-note>
         </ion-item>
 
-        <button id="button-login">Login</button>
+        <button id="button-login" [disabled]="formUser.invalid">Login</button>
 
       </form>
 
