--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -1,25 +1,22 @@
 <ion-menu contentId="main-content" auto-hide="false">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu Content</ion-title>
+      <ion-title>Main menu</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding" contentId="main-content">
 
-    <ion-item lines="none" routerLink="welcome" routerLinkActive="active">
-      <ion-icon name="home-outline" slot="start"></ion-icon>
-      <ion-label>Welcome</ion-label>
-    </ion-item>
+    <div *ngFor="let p of pages; let i = index">
+      <ion-item lines="none" routerLink="{{ p.url }}" routerLinkActive="active">
+        <ion-icon color="primary" aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+        <ion-label>{{ p.path }}</ion-label>
+      </ion-item>
+    </div>
 
-    <ion-item lines="none" routerLink="category">
-      <ion-icon name="home-outline" slot="start"></ion-icon>
-      <ion-label>Category</ion-label>
-    </ion-item>
-
-    <ion-item lines="none" routerLink="category">
-      <ion-icon name="home-outline" slot="start"></ion-icon>
-      <ion-label>Logout</ion-label>
-    </ion-item>
+    <ion-button color="danger" fill="outline" expand="block" (click)="logout()">
+      <ion-icon slot="start" name="log-out"></ion-icon>
+      Logout
+    </ion-button>
 
   </ion-content>
 </ion-menu>
