--- a/src/app/dashboard/pages/category/table-category/table-category.component.scss
+++ b/src/app/dashboard/pages/category/table-category/table-category.component.scss
@@ -6,7 +6,7 @@ table {
 }
 
 tr, th {
-    border: black solid 1px;
+    border: hsla(212, 100%, 87%, 0.5) solid 1px;
     height: 35px;
 }
 
@@ -20,6 +20,10 @@ tr, th {
 
 .r3 {
     background-color: hsla(0, 100%, 76%, 0.5);
+}
+
+.btn-op {
+    width: 40%;
 }
 
 thead {
