Pagination added Pagination has been added for category component

--- a/src/app/dashboard/pages/category/table-category/table-category.component.html
+++ b/src/app/dashboard/pages/category/table-category/table-category.component.html
@@ -1,3 +1,15 @@
+<article>
+  <ion-button color="secondary" (click)="numPage(-1)">
+    <ion-icon slot="icon-only" name="remove"></ion-icon>
+  </ion-button>
+  
+  <p>{{ page }}</p>
+  
+  <ion-button color="danger" (click)="numPage(1)">
+    <ion-icon slot="icon-only" name="add"></ion-icon>
+  </ion-button>
+</article>
+
 <table>
 
   <thead>
