--- a/src/app/dashboard/pages/welcome/welcome.page.html
+++ b/src/app/dashboard/pages/welcome/welcome.page.html
@@ -5,5 +5,17 @@
   </ion-header>
 
 <ion-content>
-    <h2>Welcome {{ name }}</h2>
+    <h2>  Welcome {{ name }}</h2>
+
+    <section class="container">
+      <ion-img src="../../../../assets/advertencia.png" alt="Alert Lends app" id="image-alert"></ion-img>
+
+      <h3>Page only for administrators</h3>
+
+      <p>This is the administration page for Lends' shop rent application.</p>
+
+      <p>This application is only for authorized personal of our app.</p>
+
+      <p>Be careful about you do in this page/application, this is a important site for the app.</p>
+    </section>
 </ion-content>
