--- a/src/app/dashboard/pages/category/table-category/table-category.component.scss
+++ b/src/app/dashboard/pages/category/table-category/table-category.component.scss
@@ -1,3 +1,9 @@
+article {
+    display: flex;
+    justify-content: space-between;
+    margin: 40px 0 15px 0
+}
+
 table {
     width: 100%;
     margin-top: 20px;
@@ -8,6 +14,16 @@ table {
 tr, th {
     border: hsla(212, 100%, 87%, 0.5) solid 1px;
     height: 35px;
+}
+
+.addButton {
+    width: 40px;
+    height: 30px;
+}
+
+.minusButton {
+    width: 40px;
+    height: 30px;
 }
 
 .r1 {
