--- a/src/app/dashboard/pages/welcome/welcome.page.html
+++ b/src/app/dashboard/pages/welcome/welcome.page.html
@@ -10,12 +10,11 @@
     <section class="container">
       <ion-img src="../../../../assets/advertencia.png" alt="Alert Lends app" id="image-alert"></ion-img>
 
-      <h3>Page only for administrators</h3>
-
-      <p>This is the administration page for Lends' shop rent application.</p>
-
-      <p>This application is only for authorized personal of our app.</p>
-
-      <p>Be careful about you do in this page/application, this is a important site for the app.</p>
+      <div class="message">
+        <h3>Page only for administrators</h3>
+        <p>This is the administration page for Lends' shop rent application.</p>
+        <p>This application is only for authorized personal of our app.</p>
+        <p>Be careful about you do in this page/application, this is a important site for the app.</p>
+      </div>
     </section>
 </ion-content>
