--- a/src/app/dashboard/pages/welcome/welcome.page.scss
+++ b/src/app/dashboard/pages/welcome/welcome.page.scss
@@ -18,3 +18,23 @@
     text-align: center;
     font-weight: 700;
 }
+
+@media only screen and (min-width: 800px) {
+    #image-alert {
+        width: 25%;
+        margin: 0;
+    }
+
+    .container {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .container h3 {
+        width: 50%;
+    }
+
+    .message {
+        width: 50%;
+    }
+}
