--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -16,6 +16,7 @@ main {
   border: solid #F7F7F7 2px;
   border-radius: 5px;
   width: 90%;
+  max-width: 700px;
   margin: auto;
   box-shadow: 5px 3px 3px hsla(299, 100%, 78%, 0.30);
 }
@@ -46,4 +47,10 @@ ion-item {
 
 ion-button {
   margin-top: 30px;
+}
+
+@media only screen and (min-width: 800px) {
+  .custom {
+    width: 70%;
+  }
 }
