Pagination and pageNotFound added A functional pagination has been added and works fine and a page not found page added. Little bug fixed.

--- a/src/app/dashboard/pages/category/table-category/table-category.component.html
+++ b/src/app/dashboard/pages/category/table-category/table-category.component.html
@@ -1,11 +1,11 @@
 <article>
-  <ion-button color="secondary" (click)="numPage(-1)">
+  <ion-button color="secondary" (click)="numPage(-1)" [disabled]="isMinusActivate">
     <ion-icon slot="icon-only" name="remove"></ion-icon>
   </ion-button>
   
   <p>{{ page }}</p>
   
-  <ion-button color="danger" (click)="numPage(1)">
+  <ion-button color="danger" (click)="numPage(1)" [disabled]="isAddActivate">
     <ion-icon slot="icon-only" name="add"></ion-icon>
   </ion-button>
 </article>
