--- a/src/app/dashboard/pages/category/category.page.scss
+++ b/src/app/dashboard/pages/category/category.page.scss
@@ -42,12 +42,72 @@ section {
     margin: auto;
 }
 
-@media only screen and (min-width: 1160px) {
-    // .container {
-    //     margin: 0 30px;
-    // }
+article {
+    display: flex;
+    justify-content: space-between;
+    margin: 40px 0 15px 0
+}
 
-    // .sub-container {
-    //     margin: 70px 0;
-    // }
+table {
+    width: 100%;
+    margin-top: 20px;
+    box-shadow: 3px 3px 3px 3px hsla(117, 0%, 73%, 0.25);
+    margin-bottom: 30px;
+}
+
+tr, th {
+    border: hsla(212, 100%, 87%, 0.5) solid 1px;
+    height: 35px;
+}
+
+.addButton {
+    width: 40px;
+    height: 30px;
+}
+
+.minusButton {
+    width: 40px;
+    height: 30px;
+}
+
+.r1 {
+    background-color: hsla(212, 100%, 87%, 0.5);
+}
+
+.r2 {
+    background-color: hsla(127, 100%, 82%, 0.5);
+}
+
+.r3 {
+    background-color: hsla(0, 100%, 76%, 0.5);
+}
+
+.btn-op {
+    width: 40%;
+}
+
+thead {
+    height: 20px;
+}
+
+@media only screen and (min-width: 800px) {
+    table{
+        width: 70%;
+        margin: auto;
+        margin-bottom: 30px;
+    }
+
+    article {
+        margin: 30px auto;
+        width: 50%;
+        border-radius: 5px;
+    }
+
+    .btn-op {
+        width: 60px;
+    }
+
+    .delete {
+        margin-left: 15px;
+    }
 }
