--- a/src/app/dashboard/pages/category/table-category/table-category.component.scss
+++ b/src/app/dashboard/pages/category/table-category/table-category.component.scss
@@ -42,8 +42,52 @@ tr, th {
     width: 40%;
 }
 
+.update-box {
+    margin-top: 30px;
+    margin-bottom: 40px;
+    box-shadow: 3px 3px 3px 3px hsla(117, 0%, 73%, 0.25);
+}
+
+.save-button {
+    margin: 20px auto 20px auto;
+    width: 100%;
+    height: 30px;
+    background-color: #0080ff;
+    font-weight: 700;
+
+    &:hover {
+        background-color: #0090ff;
+    }
+}
+
+.sub-box {
+    width: 90%;
+    margin: auto;
+}
+
+.close-button {
+    margin: 5px 5px 0 0;
+    background-color: red;
+    width: 50px;
+    height: 30px;
+    border-radius: 5px;
+
+    &:hover {
+        background-color: #a50000;
+    }
+}
+
+.title {
+    display: flex;
+    justify-content: space-between;
+}
+
 thead {
     height: 20px;
+}
+
+h3 {
+    font-weight: 700;
 }
 
 @media only screen and (min-width: 800px) {
