Section 70% finalise and changes in Android The section "Section" is finalise in a 70% and hnges in the android image. Added enviroment variables

--- a/src/app/dashboard/pages/category/category.page.html
+++ b/src/app/dashboard/pages/category/category.page.html
@@ -34,7 +34,7 @@
     </div>
 
     <section>
-      <app-table-category></app-table-category>
+      <app-table-category [created]="created"></app-table-category>
     </section>
       
       
