--- a/src/app/dashboard/pages/category/category.page.scss
+++ b/src/app/dashboard/pages/category/category.page.scss
@@ -27,6 +27,7 @@
     height: 30px;
     background-color: #0080ff;
     font-weight: 700;
+    border-radius: 5px;
 
     &:hover {
         background-color: #0090ff;
