--- a/src/app/dashboard/pages/category/table-category/table-category.component.scss
+++ b/src/app/dashboard/pages/category/table-category/table-category.component.scss
@@ -52,11 +52,12 @@ tr, th {
     margin: 20px auto 20px auto;
     width: 100%;
     height: 30px;
-    background-color: #0080ff;
+    background-color: #00bfff;
     font-weight: 700;
+    border-radius: 5px;
 
     &:hover {
-        background-color: #0090ff;
+        background-color: #00ffff;
     }
 }
 
@@ -80,6 +81,10 @@ tr, th {
 .title {
     display: flex;
     justify-content: space-between;
+}
+
+#badge {
+    margin-left: -17px;
 }
 
 thead {
@@ -109,5 +114,10 @@ h3 {
 
     .delete {
         margin-left: 15px;
+    }
+
+    .update-box {
+        width: 70%;
+        margin: auto;
     }
 }
